--- a/src/components/landing/Structure.astro
+++ b/src/components/landing/Structure.astro
@@ -1,5 +1,21 @@
 <section>
-  <div class="p-4">
+ 
+   <div  class="grid grid-cols-1  gap-4 lg:grid-cols-1 m-4 lg:grid-rows-2 ">
+
+    <div
+    class="lg:row-span-2  ring-1 dark:ring-white/10 ring-primary/5 bg-white dark:bg-secondary shadow-xl dark:shadow-thick rounded-3xl p-8  "
+    >
+    <div class="relative flex items-center gap-x-0 justify-between">
+<img src="images/halcan.svg" width="40", height="40" />
+<button type="button" class="text-white   bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5 me-2 mb-2 dark:bg-blue-600 dark:hover:bg-blue-700 focus:outline-none dark:focus:ring-blue-800  float-right">Default</button>
+   
+       </div>
+  </div>
+
+   </div>
+
+   <div class="p-4">
+
     <div
       class="grid grid-cols-1 gap-4 list-none lg:grid-cols-3 lg:grid-rows-3 xl:grid-cols-4 xl:grid-rows-4"
     >
