--- a/src/components/BaseHead.astro
+++ b/src/components/BaseHead.astro
@@ -37,5 +37,6 @@ import "../styles/global.css";
 <!-- Inter Font: https://rsms.me/inter/ -->
 <link rel="preconnect" href="https://rsms.me/" />
 <link rel="stylesheet" href="https://rsms.me/inter/inter.css" />
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
 <script src="https://unpkg.com/mailgo@0.12.2/dist/mailgo.min.js"></script>
