--- a/src/components/landing/Structure.astro
+++ b/src/components/landing/Structure.astro
@@ -6,8 +6,9 @@
     class="lg:row-span-2  ring-1 dark:ring-white/10 ring-primary/5 bg-white dark:bg-secondary shadow-xl dark:shadow-thick rounded-3xl p-8  "
     >
     <div class="relative flex items-center gap-x-0 justify-between">
-<img src="images/halcan.svg" width="40", height="40" />
-<button type="button" class="text-white   bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5 me-2 mb-2 dark:bg-blue-600 dark:hover:bg-blue-700 focus:outline-none dark:focus:ring-blue-800  float-right">Default</button>
+         <img src="images/halcan.svg" width="40", height="40" />
+<div style="width:26 vw; height:5vh;  border-radius: 40px; background-color:rgb(216, 223, 226); color:black; text-align: center; display:flex; align-items: center;" ><marquee><srpong>* Halcan * Copper * Halcan * Consulting * Halcan *</marquee></div>      
+         <i class="fa fa-envelope" style="font-size:36px" />
    
        </div>
   </div>
