--- a/src/components/landing/Structure.astro
+++ b/src/components/landing/Structure.astro
@@ -3,11 +3,11 @@
    <div  class="grid grid-cols-1  gap-4 lg:grid-cols-1 m-4 lg:grid-rows-2 ">
 
     <div
-    class="lg:row-span-2  ring-1 dark:ring-white/10 ring-primary/5 bg-white dark:bg-secondary shadow-xl dark:shadow-thick rounded-3xl p-8  "
+    class="lg:row-span-2  ring-1 dark:ring-white/10 ring-primary/5   p-8  "
     >
     <div class="relative flex items-center gap-x-0 justify-between">
          <img src="images/halcan.svg" width="40", height="40" />
-<div style="width:26 vw; height:5vh;  border-radius: 40px; background-color:rgb(216, 223, 226); color:black; text-align: center; display:flex; align-items: center;" ><marquee><srpong>* Halcan * Copper * Halcan * Consulting * Halcan *</marquee></div>      
+<div style="width:26 vw; height:5vh;  border-radius: 40px; background-color:white; color:black; text-align: center; display:flex; align-items: center;" class="text-primary"><marquee><srpong>* Halcan * Copper * Halcan * Consulting * Halcan *</marquee></div>      
          <i class="fa fa-envelope" style="font-size:36px" />
    
        </div>
