head-change tailwincss

--- a/src/components/landing/Structure.astro
+++ b/src/components/landing/Structure.astro
@@ -6,9 +6,9 @@
     class="lg:row-span-2  ring-1 dark:ring-white/10 ring-primary/5   p-8  "
     >
     <div class="relative flex items-center gap-x-0 justify-between">
-         <img src="images/halcan.svg" width="40", height="40" />
-<div style="width:26 vw; height:5vh;  border-radius: 40px; background-color:white; color:black; text-align: center; display:flex; align-items: center;" class="text-primary"><marquee><srpong>* Halcan * Copper * Halcan * Consulting * Halcan *</marquee></div>      
-         <i class="fa fa-envelope" style="font-size:36px" />
+         <img src="images/halcan.svg" class="w-15 h-10"/>
+<div class="w-30 h-10 rounded-full text-black  bg-white  text-center  flex   items-center text-primary"><marquee><srpong>* Halcan * Copper * Halcan * Consulting * Halcan *</marquee></div>      
+         <i class="fa fa-envelope text-4xl"   />
    
        </div>
   </div>
